istio/istio-health-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-health-service
  namespace: istio-system
spec:
  gateways:
  - istio-gateway
  hosts:
  - "*"
  http:
  - match:
    - headers:
        user-agent:
          prefix: GoogleHC
      method:
        exact: GET
      uri:
        exact: /
    rewrite:
      authority: istio-ingressgateway.istio-system.svc.cluster.local:15021
      uri: /healthz/ready
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 15021 # watch this part!
